<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/enter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/enter_text_to_verify"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editFakeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enter_text"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/enter_text_here"
                android:inputType="textMultiLine"
                android:textIsSelectable="true" />

            <Button
                android:id="@+id/button_detect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editFakeText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:onClick="detectFakeText"
                android:text="@string/check" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_detect"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:hint="@string/result_will_be_shown_here" />

            <TextView
                android:id="@+id/feedback_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewResult"
                android:layout_alignBaseline="@+id/feedback_two"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="40dp"
                android:layout_toStartOf="@+id/feedback_two"
                android:layout_toLeftOf="@+id/feedback_two" />

            <TextView
                android:id="@+id/feedback_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewResult"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="40dp" />


        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_plus" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

